--- a/package.json
+++ b/package.json
@@ -2,12 +2,19 @@
   "name": "simpan-gonta-online",
   "version": "1.0.0",
   "private": true,
+  "scripts": {
+    "dev": "vite",
+    "build": "vite build",
+    "preview": "vite preview"
+  },
   "dependencies": {
     "mongoose": "^8.4.1",
     "uuid": "^9.0.1"
   },
   "devDependencies": {
+    "@vitejs/plugin-react": "^4.3.1",
     "typescript": "^5.3.3",
+    "vite": "^5.3.1",
     "@types/node": "^20.11.24",
     "@types/react": "^18.2.61",
     "@types/react-dom": "^18.2.19",
