--- a/package.json
+++ b/package.json
@@ -9,16 +9,21 @@
   },
   "dependencies": {
     "mongoose": "^8.4.1",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-hook-form": "^7.51.5",
+    "react-router-dom": "^6.23.1",
+    "recharts": "^2.12.7",
     "uuid": "^9.0.1"
   },
   "devDependencies": {
-    "@vitejs/plugin-react": "^4.3.1",
-    "typescript": "^5.3.3",
-    "vite": "^5.3.1",
     "@types/node": "^20.11.24",
     "@types/react": "^18.2.61",
     "@types/react-dom": "^18.2.19",
     "@types/uuid": "^9.0.8",
-    "@vercel/node": "^3.0.25"
+    "@vercel/node": "^3.0.25",
+    "@vitejs/plugin-react": "^4.3.1",
+    "typescript": "^5.3.3",
+    "vite": "^5.3.1"
   }
 }
