--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,12 +7,11 @@
     "strict": true,
     "forceConsistentCasingInFileNames": true,
     "esModuleInterop": true,
-    "module": "esnext",
-    "moduleResolution": "bundler",
+    "module": "CommonJS",
+    "moduleResolution": "node",
     "resolveJsonModule": true,
     "isolatedModules": true,
     "jsx": "react-jsx",
-    "noEmit": true,
     "types": ["@vercel/node"]
   },
   "include": ["**/*.ts", "**/*.tsx"],
